tests/lex/invalid/hex_literal_no_value.zn
def f() {
    // error: hex literal has no value, only prefix
    var x = 0x;
}
